--- a/src/main/webapp/resources/core/css/amigos.css
+++ b/src/main/webapp/resources/core/css/amigos.css
@@ -202,6 +202,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    min-width: 14rem;
     position: relative;
     /* width: 80%; */
     overflow: hidden;
@@ -242,7 +243,6 @@ main {
 .profile {
     min-width: 200px;
     max-width: 200px;
-    background: #fff;
     border-radius: 10px;
     padding: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -275,6 +275,10 @@ main {
     }
 }
 
+.amigo {
+    background: #fad0d0;
+}
+
 .profile-username {
     font-size: 1.5rem;
     font-weight: 600;
@@ -293,6 +297,7 @@ main {
 .profile-actions {
     margin-top: 1.5rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     & > * {
@@ -301,7 +306,7 @@ main {
 }
 
 .btn {
-    background-color: #ddd;
+    background-color: #fff;
     color: #333;
     padding: 10px 20px;
     font-size: 16px;
@@ -313,6 +318,7 @@ main {
     transition: all 0.3s ease;
     box-shadow: none;
     text-decoration: none;
+    margin: 2px;
 }
 
 .btn:hover {
@@ -320,6 +326,14 @@ main {
     color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-color: white;
+}
+
+.profile-actions a.mensaje:hover {
+    background: #71b9ff;
+}
+
+.profile-actions a.eliminar:hover {
+    background: #dc2121;
 }
 
 /* Botones carousel */
