--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -100,6 +100,7 @@
         <div class="sugerencias">
             <section class="friends-slider">
                 <h2>Recomendados para ti</h2>
+                <span th:text="${error}" style="color: red; font-weight: bold"></span>
                 <div th:if="${amigosSugeridos.size()} <= 0" class="sin-amigos">
                     <h1>No tienes sugerencias por ahora, ¡Revisa tus solicitudes :D!</h1>
                 </div>
@@ -119,7 +120,7 @@
                             <h2 class="profile-user-handle" th:text="${recomendado.nombreUsuario}"></h2>
                             <small class="descripcion" th:text="${recomendado.descripcion != null ? '&quot;' + recomendado.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
                             <div class="profile-actions">
-                                <a th:href="@{/agregar-amigo(idAmigo=${recomendado.id}, idUsuario=${usuarioActual.id})}" class="btn">Agregar amigo</a>
+                                <a th:href="@{/enviar-solicitud(receptorId=${recomendado.id}, idUsuario=${usuarioActual.id})}" class="btn agregar">Agregar amigo</a>
                             </div>
                         </div>
                     </div>
@@ -134,31 +135,36 @@
             </section>
         </div>
 
-        <div class="sugerencias">
+        <!-- SOLICITUDES RECIBIDAS -->
+        <div class="solicitudes-recibidas">
             <section class="friends-slider">
-                <h2>Solicitudes recibidas</h2>
+                <h2>Solicitudes de Amistad Recibidas</h2>
+                <div th:if="${solicitudesRecibidas.size()} <= 0" class="sin-amigos">
+                    <h1>No tienes solicitudes pendientes, ¡Revisa tus amigos :D!</h1>
+                </div>
                 <div class="slider-container">
                     <!-- Flecha izquierda -->
-                    <button class="slider-arrow left" onclick="moveSlider('recibidas-slider', 1)">
+                    <button th:if="${solicitudesRecibidas.size()} >= 5" class="slider-arrow left" onclick="moveSlider('solicitudes-slider', 1)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
                             <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
                             <path d="M9 12H15M9 12l4-4M9 12l4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg>
                     </button>
-                    <div class="slider" id="recibidas-slider">
-                        <div th:if="${amigosSugeridos != null}" th:each="recomendado : ${amigosSugeridos}" class="profile">
+                    <div class="slider" id="solicitudes-slider">
+                        <div th:if="${solicitudesRecibidas != null}" th:each="solicitud : ${solicitudesRecibidas}" class="profile solicitud">
                             <div class="profile-image">
-                                <img th:src="@{${recomendado.urlFotoPerfil}}" alt="Foto de perfil de [[${recomendado.nombre}]]" />
+                                <img th:src="@{${solicitud.solicitante.urlFotoPerfil}}" alt="Foto de perfil de [[${solicitud.solicitante.nombre}]]" />
                             </div>
-                            <h2 class="profile-user-handle" th:text="${recomendado.nombreUsuario}"></h2>
-                            <small class="descripcion" th:text="${recomendado.descripcion != null ? '&quot;' + recomendado.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
+                            <h2 class="profile-user-handle" th:text="${solicitud.solicitante.nombreUsuario}"></h2>
+                            <small class="descripcion" th:text="${solicitud.solicitante.descripcion != null ? '&quot;' + solicitud.solicitante.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
                             <div class="profile-actions">
-                                <button class="btn">Agregar amigo</button>
+                                <a th:href="@{/aceptar-solicitud(solicitudId=${solicitud.id}, idUsuario=${usuarioActual.id})}" class="btn aceptar">Aceptar solicitud</a>
+                                <a th:href="@{/rechazar-solicitud(solicitudId=${solicitud.id}, idUsuario=${usuarioActual.id})}" class="btn rechazar">Rechazar solicitud</a>
                             </div>
                         </div>
                     </div>
                     <!-- Flecha derecha -->
-                    <button class="slider-arrow right" onclick="moveSlider('recibidas-slider', -1)">
+                    <button th:if="${solicitudesRecibidas.size()} >= 5" class="slider-arrow right" onclick="moveSlider('solicitudes-slider', -1)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
                             <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
                             <path d="M15 12H9M15 12l-4-4M15 12l-4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -168,31 +174,36 @@
             </section>
         </div>
 
-        <div class="sugerencias">
+        <!-- SOLICITUDES ENVIADAS -->
+        <div class="solicitudes-enviadas">
             <section class="friends-slider">
-                <h2>Solicitudes pendientes</h2>
+                <h2>Solicitudes de Amistad Enviadas</h2>
+                <div th:if="${solicitudesEnviadas.size()} <= 0" class="sin-amigos">
+                    <h1>No tienes solicitudes enviadas, ¡Revisa tus amigos :D!</h1>
+                </div>
                 <div class="slider-container">
                     <!-- Flecha izquierda -->
-                    <button class="slider-arrow left" onclick="moveSlider('enviadas-slider', 1)">
+                    <button th:if="${solicitudesEnviadas.size()} >= 5" class="slider-arrow left" onclick="moveSlider('solicitudes-enviadas-slider', 1)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
                             <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
                             <path d="M9 12H15M9 12l4-4M9 12l4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg>
                     </button>
-                    <div class="slider" id="enviadas-slider">
-                        <div th:if="${amigosSugeridos != null}" th:each="recomendado : ${amigosSugeridos}" class="profile">
+                    <div class="slider" id="solicitudes-enviadas-slider">
+                        <div th:if="${solicitudesEnviadas != null}" th:each="solicitud : ${solicitudesEnviadas}" class="profile solicitud">
                             <div class="profile-image">
-                                <img th:src="@{${recomendado.urlFotoPerfil}}" alt="Foto de perfil de [[${recomendado.nombre}]]" />
+                                <img th:src="@{${solicitud.receptor.urlFotoPerfil}}" alt="Foto de perfil de [[${solicitud.receptor.nombre}]]" />
                             </div>
-                            <h2 class="profile-user-handle" th:text="${recomendado.nombreUsuario}"></h2>
-                            <small class="descripcion" th:text="${recomendado.descripcion != null ? '&quot;' + recomendado.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
+                            <h2 class="profile-user-handle" th:text="${solicitud.receptor.nombreUsuario}"></h2>
+                            <small class="descripcion" th:text="${solicitud.receptor.descripcion != null ? '&quot;' + solicitud.receptor.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
                             <div class="profile-actions">
-                                <button class="btn">Agregar amigo</button>
+                                <!-- Botón para cancelar la solicitud enviada -->
+                                <a th:href="@{/cancelar-solicitud(solicitudId=${solicitud.id}, idUsuario=${usuarioActual.id})}" class="btn cancelar">Cancelar solicitud</a>
                             </div>
                         </div>
                     </div>
                     <!-- Flecha derecha -->
-                    <button class="slider-arrow right" onclick="moveSlider('enviadas-slider', -1)">
+                    <button th:if="${solicitudesEnviadas.size()} >= 5" class="slider-arrow right" onclick="moveSlider('solicitudes-enviadas-slider', -1)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
                             <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
                             <path d="M15 12H9M15 12l-4-4M15 12l-4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
