--- a/src/main/webapp/resources/core/css/amigos.css
+++ b/src/main/webapp/resources/core/css/amigos.css
@@ -201,10 +201,8 @@ main {
     position: relative;  /* Esto asegura que las flechas se posicionen en relación a este contenedor */
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     min-width: 14rem;
-    position: relative;
-    /* width: 80%; */
+    width: 80%;
     overflow: hidden;
     padding: 10px;
     align-content: stretch;
@@ -279,6 +277,10 @@ main {
     background: #fad0d0;
 }
 
+.recomendado {
+    background: #fdfdfd;
+}
+
 .profile-username {
     font-size: 1.5rem;
     font-weight: 600;
@@ -335,6 +337,16 @@ main {
 .profile-actions a.eliminar:hover {
     background: #dc2121;
 }
+
+.profile-actions a.agregar {
+    background: #EEEEEE;
+}
+
+.profile-actions a.agregar:hover {
+    background: #333;
+    color: white;
+}
+
 
 /* Botones carousel */
 .slider-arrow svg {
