--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -58,45 +58,11 @@
 
 <div class="tableta">
     <main class="info-container">
+        <span th:text="${error}" style="color: red"></span>
+        <span th:text="${mensaje}" style="color: green"></span>
         <!-- CARTAS DE PERFIL -->
-        <div class="tus-amigos">
-            <section class="friends-slider">
-                <h2>Tus amigos</h2>
-                <div th:if="${amigos.size()} <= 0" class="sin-amigos">
-                    <h1>No tienes amigos, ¡Revisa tus recomendados :D!</h1>
-                </div>
-                <div class="slider-container" th:if="${amigos} != null">
-                    <!-- Flecha izquierda -->
-                    <button th:if="${amigos.size()} >= 5" class="slider-arrow left" onclick="moveSlider('amigos-slider', 1)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
-                            <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
-                            <path d="M9 12H15M9 12l4-4M9 12l4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                    </button>
-                    <div class="slider" id="amigos-slider">
-                        <div th:if="${amigos != null}" th:each="amigo : ${amigos}" class="profile amigo">
-                            <div class="profile-image">
-                                <img th:src="@{${amigo.urlFotoPerfil}}" alt="Foto de perfil de [[${recomendado.nombre}]]" />
-                            </div>
-                            <h2 class="profile-user-handle" th:text="${amigo.nombreUsuario}"></h2>
-                            <small class="descripcion" th:text="${amigo.descripcion != null ? '&quot;' + amigo.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
-                            <div class="profile-actions">
-                                <a th:href="@{/chat(idUser1=${usuarioActual.id}, idUser2=${amigo.id})}" class="btn mensaje">Enviar mensaje</a>
-                                <a th:href="@{/eliminar-amigo(idAmigo=${amigo.id}, idUsuario=${usuarioActual.id})}" class="btn eliminar">Eliminar amigo</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Flecha derecha -->
-                    <button th:if="${amigos.size()} >= 5" class="slider-arrow right" onclick="moveSlider('amigos-slider', -1)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
-                            <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
-                            <path d="M15 12H9M15 12l-4-4M15 12l-4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                    </button>
-                </div>
-            </section>
-        </div>
 
+        <!-- PERFILES SUGERIDOS -->
         <div class="sugerencias">
             <section class="friends-slider">
                 <h2>Recomendados para ti</h2>
@@ -135,6 +101,45 @@
             </section>
         </div>
 
+        <!-- MIS AMIGOS -->
+        <div class="tus-amigos">
+            <section class="friends-slider">
+                <h2>Tus amigos</h2>
+                <div th:if="${amigos.size()} <= 0" class="sin-amigos">
+                    <h1>No tienes amigos, ¡Revisa tus recomendados :D!</h1>
+                </div>
+                <div class="slider-container" th:if="${amigos} != null">
+                    <!-- Flecha izquierda -->
+                    <button th:if="${amigos.size()} >= 5" class="slider-arrow left" onclick="moveSlider('amigos-slider', 1)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
+                            <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
+                            <path d="M9 12H15M9 12l4-4M9 12l4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                    </button>
+                    <div class="slider" id="amigos-slider">
+                        <div th:if="${amigos != null}" th:each="amigo : ${amigos}" class="profile amigo">
+                            <div class="profile-image">
+                                <img th:src="@{${amigo.urlFotoPerfil}}" alt="Foto de perfil de [[${recomendado.nombre}]]" />
+                            </div>
+                            <h2 class="profile-user-handle" th:text="${amigo.nombreUsuario}"></h2>
+                            <small class="descripcion" th:text="${amigo.descripcion != null ? '&quot;' + amigo.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
+                            <div class="profile-actions">
+                                <a th:href="@{/chat(idUser1=${usuarioActual.id}, idUser2=${amigo.id})}" class="btn mensaje">Enviar mensaje</a>
+                                <a th:href="@{/eliminar-amigo(idAmigo=${amigo.id}, idUsuario=${usuarioActual.id})}" class="btn eliminar">Eliminar amigo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Flecha derecha -->
+                    <button th:if="${amigos.size()} >= 5" class="slider-arrow right" onclick="moveSlider('amigos-slider', -1)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
+                            <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle>
+                            <path d="M15 12H9M15 12l-4-4M15 12l-4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                    </button>
+                </div>
+            </section>
+        </div>
+
         <!-- SOLICITUDES RECIBIDAS -->
         <div class="solicitudes-recibidas">
             <section class="friends-slider">
@@ -151,7 +156,7 @@
                         </svg>
                     </button>
                     <div class="slider" id="solicitudes-slider">
-                        <div th:if="${solicitudesRecibidas != null}" th:each="solicitud : ${solicitudesRecibidas}" class="profile solicitud">
+                        <div th:if="${solicitudesRecibidas != null}" th:each="solicitud : ${solicitudesRecibidas}" class="profile solicitudRecibida">
                             <div class="profile-image">
                                 <img th:src="@{${solicitud.solicitante.urlFotoPerfil}}" alt="Foto de perfil de [[${solicitud.solicitante.nombre}]]" />
                             </div>
@@ -190,7 +195,7 @@
                         </svg>
                     </button>
                     <div class="slider" id="solicitudes-enviadas-slider">
-                        <div th:if="${solicitudesEnviadas != null}" th:each="solicitud : ${solicitudesEnviadas}" class="profile solicitud">
+                        <div th:if="${solicitudesEnviadas != null}" th:each="solicitud : ${solicitudesEnviadas}" class="profile solicitudEnviada">
                             <div class="profile-image">
                                 <img th:src="@{${solicitud.receptor.urlFotoPerfil}}" alt="Foto de perfil de [[${solicitud.receptor.nombre}]]" />
                             </div>
