--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -22,22 +22,22 @@
 
         <p th:if="${error}" th:text="${error}" style="color: red;"></p>
 
-            <label for="nombre">Nombre de usuario</label>
-            <input th:field="*{nombreUsuario}" type="text" id="nombre" name="nombre" placeholder="Ej: Jaimito4570" required>
+        <label for="nombre">Nombre de usuario</label>
+        <input th:field="*{nombreUsuario}" type="text" id="nombre" name="nombre" placeholder="Ej: Jaimito4570" required>
 
-            <label for="email">Correo Electrónico</label>
+        <label for="email">Correo Electrónico</label>
+        <input th:field="*{email}" type="email" id="email" name="email" placeholder="Ej: name@example.com" required>
 
-            <input th:field="*{email}" type="email" id="email" name="email" placeholder="Ej: name@example.com" required>
+        <label for="password">Contraseña</label>
+        <input th:field="*{password}" type="password" id="password" name="password" placeholder="Entre 5 y 15 caracteres" required>
 
-            <label for="password">Contraseña</label>
-            <input th:field="*{password}" type="password" id="password" name="password" placeholder="Entre 5 y 15 caracteres" required>
+        <label for="password2">Repetir Contraseña</label>
+        <input th:field="*{confirmPassword}" type="password" id="password2" name="password2" placeholder="Entre 5 y 15 caracteres" required>
 
-            <label for="password2">Repetir Contraseña</label>
-            <input th:field="*{confirmPassword}" type="password" id="password2" name="password2" placeholder="Entre 5 y 15 caracteres" required>
+        <label for="descripcion">Añade una descripcion (opcional)</label>
+        <textarea th:field="*{descripcion}" type="text" id="descripcion" name="descripcion" placeholder="¡Agrega una descripción a tu perfil!" style="height: 90px"></textarea>
 
-
-
-            <button type="submit">Registrarse</button>
+        <button type="submit">Registrarse</button>
     </form>
 
     <footer>
