--- a/src/main/webapp/resources/core/css/amigos.css
+++ b/src/main/webapp/resources/core/css/amigos.css
@@ -279,7 +279,7 @@ main {
 }
 
 .recomendado {
-    background: #d6ad8f;
+    background: #eccfc1;
 }
 
 .solicitudRecibida {
@@ -287,7 +287,7 @@ main {
 }
 
 .solicitudEnviada {
-    background: #96a0d3;
+    background: #a8b1e6;
 }
 
 /* CARTAS CONTENIDO */
