arrelgos importantes en truco, diseño y funcionalidades v1

--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -159,6 +159,8 @@
                 <span style="display: none" th:text="${ultimaPartida.getGanador().getUsuario().getId()}"></span>
             </div>
         </div>
+
+        <!-- ESTADISTICAS PROPIAS -->
         <div class="estadisticas-rectangulo">
             <h1>Estadisticas</h1>
             <div class="estadisticas-propias">
